resources/clusters/staging/rhobss01ue1/alertmanager/bundle/02-alertmanager-Service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: alertmanager-tls
  labels:
    app.kubernetes.io/component: alertmanager
    app.kubernetes.io/instance: observatorium
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/part-of: observatorium
  name: alertmanager
  namespace: rhobs-stage
spec:
  ports:
  - name: http
    port: 9093
    protocol: TCP
    targetPort: 9093
  - name: https
    port: 8443
    targetPort: 8443
  selector:
    app.kubernetes.io/component: alertmanager
    app.kubernetes.io/instance: observatorium
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/part-of: observatorium
status:
  loadBalancer: {}
